--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,11 @@
 #projectsCard{
     background-color: #D6DBE0;
+    /* display: flex;
+    justify-content: center; */
+}
+
+#projectsRow2 {
+    display: flex;
 }
 
 #projectsDiv1 {
@@ -12,55 +18,234 @@
     justify-content: center;
 }
 
-#creature, #api1, #api2, #blueBadge, #redBadge {
+#creature, #static, #api1, #api2, #blueBadge, #redBadge {
     width: 300px;
     height: 300px;
     border-radius: 10px;
-    margin: 1em;
+    margin: .75em;
 }
 
-#static {
-    width: 300px;
-    height: 300px;
-    border: 1px solid black;
+#creatureContain, #staticContain, #api1Contain {
+    position: relative;
+    width: 50%;
+    margin: .25em;
+}
+
+#creatureOver {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: transparent;
     border-radius: 10px;
-    margin: 1em;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
 }
 
-#creature:hover,
-#creature:focus {
-  box-shadow: 0 2em 2em -0.75em black;
-  transform: translateY(-.75em);
+#creatureContain:hover #creatureOver {
+    bottom: 0;
+    height: 100%;
 }
 
-#static:hover,
-#static:focus {
-  box-shadow: 0 2em 2em -0.75em black;
-  transform: translateY(-.75em);
+#creatureText {
+    color: white;
+    text-shadow: #01151E 0px 0px 3px,  #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-#api1:hover,
-#api1:focus {
-  box-shadow: 0 2em 2em -0.75em black;
-  transform: translateY(-.75em);
+#staticContain {
+    position: relative;
+    width: 50%;
+    margin: .25em;
 }
 
-#api2:hover,
-#api2:focus {
-  box-shadow: 0 2em 2em -0.75em black;
-  transform: translateY(-.75em);
+#staticOver {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
 }
 
-#blueBadge:hover,
-#blueBadge:focus {
-  box-shadow: 0 2em 2em -0.75em black;
-  transform: translateY(-.75em);
+#staticContain:hover #staticOver {
+    bottom: 0;
+    height: 100%;
 }
 
-#redBadge:hover,
-#redBadge:focus {
-  box-shadow: 0 2em 2em -0.75em black;
-  transform: translateY(-.75em);
+#staticText {
+    color: white;
+    text-shadow: #01151E 0px 0px 3px,  #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
+
+#api1Contain {
+    position: relative;
+    width: 50%;
+    margin: .25em;
+}
+
+#api1Over {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
+}
+
+#api1Contain:hover #api1Over {
+    bottom: 0;
+    height: 100%;
+}
+
+#api1Text {
+    color: white;
+    text-shadow: #01151E 0px 0px 3px,  #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#api2Contain {
+    position: relative;
+    width: 50%;
+    margin: .25em;
+}
+
+#api2Over {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
+}
+
+#api2Contain:hover #api2Over {
+    bottom: 0;
+    height: 100%;
+}
+
+#api2Text {
+    color: white;
+    text-shadow: #01151E 0px 0px 3px,  #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#blueContain {
+    position: relative;
+    width: 50%;
+    margin: .25em;
+}
+
+#blueOver {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
+}
+
+#blueContain:hover #blueOver {
+    bottom: 0;
+    height: 100%;
+}
+
+#blueText {
+    color: yellow;
+    text-shadow: #01151E 0px 0px 3px,  #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#redContain {
+    position: relative;
+    width: 50%;
+    margin: .25em;
+}
+
+#redOver {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    height:0;
+    transition: .5s ease;
+}
+
+#redContain:hover #redOver {
+    bottom: 0;
+    height: 100%;
+}
+
+#redText {
+    color: yellow;
+    text-shadow: #01151E 0px 0px 3px,  #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px, #01151E 0px 0px 3px;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 
 
