--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,7 @@
 #projectsCard{
     background-color: #D6DBE0;
-    /* display: flex;
-    justify-content: center; */
+    display: flex;
+    justify-content: center;
 }
 
 #projectsRow2 {
