--- a/css/about.css
+++ b/css/about.css
@@ -30,8 +30,10 @@
 
 #familyImgContainer {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
+
 
 #family {
     /* border: 1px solid black; */
